--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "flightsandsearch",
   "version": "1.0.0",
-  "description": "Micro service for handling Flight CRUD",
+  "description": "Micro service for handling FLIGHT CRUD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon src/index"
   },
-  "author": "Manglesh Yadav",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mysql2": "^3.9.4",
-    "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.27.0",
+    "sequelize-cli": "^6.5.2"
   }
 }
